<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/prompt_regular"
        android:text="@string/do_you_want_to_buy_a_ticket"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <RelativeLayout
        android:id="@+id/rl_ticket"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_question"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/ticket_to_buy">

        <TextView
            android:id="@+id/tv_cinemaName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/prompt_bold"
            android:text="@string/cinemaName"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_filmName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_cinemaName"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/prompt_bold"
            android:text="@string/film_name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RelativeLayout
            android:id="@+id/rl_session"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_filmName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tv_session"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/prompt_regular"
                android:text="@string/session"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/tv_session"
                android:fontFamily="@font/prompt_medium"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/tv_date"
                android:fontFamily="@font/prompt_medium"
                android:text="@string/time"
                android:textColor="@color/black"
                android:textSize="16dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_session"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/prompt_regular"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tv_priceData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_price"
                android:fontFamily="@font/prompt_medium"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tv_row"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/tv_price"
                android:fontFamily="@font/prompt_regular"
                android:text="@string/rowName"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tv_rowData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_row"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/tv_price"
                android:fontFamily="@font/prompt_medium"
                android:text="@string/rowName"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tv_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/tv_row"
                android:fontFamily="@font/prompt_regular"
                android:text="@string/place"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tv_placeData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_place"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/tv_row"
                android:fontFamily="@font/prompt_medium"
                android:text="@string/place"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tv_hall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/tv_place"
                android:fontFamily="@font/prompt_regular"
                android:text="@string/hall"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tv_hallData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_hall"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/tv_place"
                android:fontFamily="@font/prompt_medium"
                android:text="@string/hall"
                android:textColor="@color/black"
                android:textSize="16dp" />
        </RelativeLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_ticket"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:onClick="onBtnCancelClick"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/btn_buy"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_ticket"
        android:layout_alignParentRight="true"
        android:layout_marginTop="40dp"
        android:layout_marginRight="30dp"
        android:onClick="onBtnBuyClick"
        android:text="@string/buy" />

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_buy"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/prompt_medium"
        android:text="@string/smth_went_wrong"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:textStyle="italic"
        android:visibility="invisible" />

    <FrameLayout
        android:id="@+id/menuLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <include layout="@layout/my_menu" />
    </FrameLayout>

</RelativeLayout>