<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingVertical="5dp">

        <TextView
            android:id="@+id/tv_filmName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/prompt_bold"
            android:text="@string/film_name"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_cinemaName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_filmName"
            android:fontFamily="@font/prompt_medium"
            android:text="@string/cinemaName"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:textStyle="italic" />

        <RelativeLayout
            android:id="@+id/rl_session"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_cinemaName"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tv_session"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/prompt_regular"
                android:text="@string/session"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/tv_session"
                android:fontFamily="@font/prompt_medium"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/tv_date"
                android:fontFamily="@font/prompt_medium"
                android:text="@string/time"
                android:textColor="@color/black"
                android:textSize="16dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_session"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/prompt_regular"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tv_priceData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_price"
                android:fontFamily="@font/prompt_medium"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tv_row"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/tv_price"
                android:fontFamily="@font/prompt_regular"
                android:text="@string/rowName"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tv_rowData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_row"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/tv_price"
                android:fontFamily="@font/prompt_medium"
                android:text="@string/rowName"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tv_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/tv_row"
                android:fontFamily="@font/prompt_regular"
                android:text="@string/place"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tv_placeData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_place"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/tv_row"
                android:fontFamily="@font/prompt_medium"
                android:text="@string/place"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tv_hall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/tv_place"
                android:fontFamily="@font/prompt_regular"
                android:text="@string/hall"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tv_hallData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_hall"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/tv_place"
                android:fontFamily="@font/prompt_medium"
                android:text="@string/hall"
                android:textColor="@color/black"
                android:textSize="16dp" />
        </RelativeLayout>

    </RelativeLayout>

</FrameLayout>